Set margin to .global-footer to prevent it from being overlapped by .order-cta

--- a/tomorrow-house/styles/layouts/_global-footer.scss
+++ b/tomorrow-house/styles/layouts/_global-footer.scss
@@ -1,6 +1,7 @@
 .global-footer {
   padding-top: 32px;
   padding-bottom: 40px;
+  margin-bottom: $order-cta-height;
 
   background-color: $background;
 
@@ -48,6 +49,8 @@
   }
 
   @include responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include text-style(14);
     }
